# profile.wearable.apps.native.classic-watch

./: AUTHORS  CMakeLists.txt  NOTICE  org.tizen.classic-watch.efl  org.tizen.classic-watch.manifest  org.tizen.classic-watch.xml  project.config
include/: classic-watch.h  data.h  view.h
packaging/: org.tizen.classic-watch.spec
res/: CMakeLists.txt
res/edje/: classic-watch.edc
src/: data.c  main.c  view.c
